--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,10 @@ openai>=1.0.0
 scikit-learn>=1.3.0
 numpy>=1.24.0
 
+# Transformers ve NLP (Cinsiyet/Yaş analizi için)
+transformers>=4.21.0
+datasets>=2.0.0
+
 # Görselleştirme
 matplotlib>=3.7.0
 seaborn>=0.12.0
